links updated and navbar fixed

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
- 
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -44,7 +44,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a href="#"><span class="active">About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="about.html"  class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
@@ -53,11 +53,11 @@
               </li>
             </ul>
           </li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Join US</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="join.html">Join Us</a></li>
         </ul>
-        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
+        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
@@ -76,11 +76,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>HachStacks Tech Community</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>About</li>
-          </ol>
+          <h2>HachStacks Profile</h2>
         </div>
 
       </div>
@@ -92,7 +88,7 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" style="text-align: justify;">
-            <h3><strong>Get to know us!</strong></h3>
+            <h3><strong style="color: purple;">Get to know us!</strong></h3>
             <p>“Tech communities is much more than belonging to something; it is about
               doing something together that makes belonging matter” ~ Brian Solis. <br> <br>
               These communities are driven by a group of people with a shared code of
@@ -102,8 +98,8 @@
               providing resources necessary for their growth, encourage and mentor
               through regular meetups and events, access to carefully selected patrons and
               resource persons. <br> <br>
-              “When you see someone as involved in the process as you are, it results in an
-              intense drive and motivation” ~ <span style="color: purple;"><b>HachStacks</b></span>
+              <strong>“When you see someone as involved in the process as you are, it results in an
+              intense drive and motivation”</strong> ~ <span style="color: purple;"><b>HachStacks</b></span>
               </p>
               <div class="text-right"></div>
           </div>
@@ -112,13 +108,13 @@
               <br>
               HachStacks aims at identifying these tech minds, 
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> CONNECT, guide, teach and allow them</li>
-              <li><i class="ri-check-double-line"></i> EXPLORE the tech ecosystem with access to premium resources that will help them</li>
-              <li><i class="ri-check-double-line"></i> GROW into tech giants.</li>
+            <ul> 
+              <li><i class="ri-check-double-line"></i> <b>CONNECT,</b> guide, teach and allow them</li>
+              <li><i class="ri-check-double-line"></i> <b>EXPLORE</b> the tech ecosystem with access to premium resources that will help them</li>
+              <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              Join this amazing community today! Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
+              <b>Join this amazing community today! </b>Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
             </p>
           </div>
         </div>
@@ -132,7 +128,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Core <strong>Team</strong></h2>
-          <p style="text-align: justify;">HachStacks was formed by a team of tech enthusiasts in Akwa Ibom State 
+          <p style="text-align: justify;">HachStacks was formed by a team of student tech enthusiasts in Akwa Ibom State 
             University in 2021. The body houses all students and individuals interested in 
             learning and teaching others digital skills relevant in the evolutionary 
             technology world. 
@@ -145,9 +141,46 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up">
-              <div class="member-img">
+            <div class="member" data-aos="fade-up" data-aos-delay="300">
+              <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/unomieta"><i class="bx bxl-twitter"></i></a>
+                  <a href="https://facebook.com/joe.unomieta"><i class="bx bxl-facebook"></i></a>
+                  <a href="https://github.com/RomeoChris"><i class="bx bxl-github"></i></a>
+                  <a href="https://linkedin.com/in/joseph-unomieta"><i class="bx bxl-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Joseph Unomieta</h4>
+                <span>Team Lead</span>
+                <span>Project Manager</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img client-logo teamedit">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/chris_priority"><i class="bx bxl-twitter"></i></a>
+                  <a href="https://facebook.com/chris.eminence.3"><i class="bx bxl-facebook"></i></a>
+                  <a href="https://github.com/chris-eminence"><i class="bx bxl-github"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Christopher Emediong</h4>
+                <span>Co-Team Lead</span>
+                <span>Android Developer</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img client-logo teamedit">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bx bxl-twitter"></i></a>
                   <a href=""><i class="bx bxl-facebook"></i></a>
@@ -163,52 +196,14 @@
           </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-github"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Joseph Unomieta</h4>
-                <span>Team Lead</span>
-                <span>Project Manager</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-github"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Christopher Emediong</h4>
-                <span>Co-Team Lead</span>
-                <span>Android Developer</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
+              <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-github"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
+                  <a href="https://twitter.com/sirkiosta"><i class="bx bxl-twitter"></i></a>
+                  <a href="https://facebook.com/sirkiosta"><i class="bx bxl-facebook"></i></a>
+                  <a href="https://github.com/sirkiosta"><i class="bx bxl-github"></i></a>
+                  <a href="https://linkedin/in/sirkiosta"><i class="bx bxl-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -219,8 +214,8 @@
           </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-5.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bx bxl-twitter"></i></a>
@@ -238,13 +233,13 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
+              <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bx bxl-twitter"></i></a>
                   <a href=""><i class="bx bxl-facebook"></i></a>
                   <a href=""><i class="bx bxl-github"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
+                  <a href="https://linkedin.com/in/uduak-usoro-5501591a3"><i class="bx bxl-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -256,7 +251,7 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
+              <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-7.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bx bxl-twitter"></i></a>
@@ -273,14 +268,12 @@
           </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img client-logo teamedit">
                 <img src="assets/img/team/team-8.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bx bxl-twitter"></i></a>
-                  <a href=""><i class="bx bxl-facebook"></i></a>
-                  <a href=""><i class="bx bxl-github"></i></a>
-                  <a href=""><i class="bx bxl-linkedin"></i></a>
+                  <a href="https://twitter.com/TechviberNG"><i class="bx bxl-twitter"></i></a>
+                  <a href="https://github.com/simeon4real"><i class="bx bxl-github"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -367,15 +360,19 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-3 col-md-6 footer-contact footer-links">
             <h3>HachStacks</h3>
             <p>
-              Akwa Ibom State University,<br>
-              Both Campuses<br><br>
-              <strong>Whatsapp:</strong> +234 815 6841 952<br>
-              <strong>Email:</strong> hello@hachstacks.com<br>
+              Akwa Ibom State University,<br><br>
             </p>
+            <div class="social-links text-md-right pt-3 pt-md-0">
+              <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+              <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://linkedin.com/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
           </div>
+          
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
@@ -391,11 +388,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Digital Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
             </ul>
           </div>
 
@@ -415,13 +412,11 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>HachStacks™</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>HachStacks</span></strong>.
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <p><b>All Rights Reserved</b></p>
       </div>
     </div>
   </footer><!-- End Footer -->
