--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="join.html">Join US</a></li>
+          <li><a href="join.html">Join Us</a></li>
         </ul>
-        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
+        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-github"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 
@@ -106,7 +105,7 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right" style="text-align: justify;">
-            <h3><strong>Get to know us!</strong></h3>
+            <h3><strong style="color: purple;">Get to know us!</strong></h3>
             <p>“Tech communities is much more than belonging to something; it is about
               doing something together that makes belonging matter” ~ Brian Solis. <br> <br>
               These communities are driven by a group of people with a shared code of
@@ -116,8 +115,8 @@
               providing resources necessary for their growth, encourage and mentor
               through regular meetups and events, access to carefully selected patrons and
               resource persons. <br> <br>
-              “When you see someone as involved in the process as you are, it results in an
-              intense drive and motivation” ~ <span style="color: purple;"><b>HachStacks</b></span>
+              <strong>“When you see someone as involved in the process as you are, it results in an
+              intense drive and motivation”</strong> ~ <span style="color: purple;"><b>HachStacks</b></span>
               </p>
               <div class="text-right"></div>
           </div>
@@ -127,12 +126,12 @@
               HachStacks aims at identifying these tech minds, 
             </p>
             <ul> 
-              <li><i class="ri-check-double-line"></i> CONNECT, guide, teach and allow them</li>
-              <li><i class="ri-check-double-line"></i> EXPLORE the tech ecosystem with access to premium resources that will help them</li>
-              <li><i class="ri-check-double-line"></i> GROW into tech giants.</li>
+              <li><i class="ri-check-double-line"></i> <b>CONNECT,</b> guide, teach and allow them</li>
+              <li><i class="ri-check-double-line"></i> <b>EXPLORE</b> the tech ecosystem with access to premium resources that will help them</li>
+              <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              Join this amazing community today! Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
+              <b>Join this amazing community today! </b>Send a DM to any of our social media handles and <a href="join.html" class="btn-get-started" >fill this form here</a>
             </p>
           </div>
         </div>
@@ -270,14 +269,16 @@
           <div class="col-lg-3 col-md-6 footer-contact footer-links">
             <h3>HachStacks</h3>
             <p>
-              Akwa Ibom State University<br><br>
-
-              <ul>
-                <li><i class="bx bxl-envelope"></i> <a href="mailto:hello@hachstacks.com"> hello@hachstacks.com</a></li>
-                <li><i class="bx bxl-whatsapp"></i> <a href="https://wa.me/+2348156841952"> +234 815 684 1952</a></li>
-              </ul>
+              Akwa Ibom State University,<br><br>
             </p>
+            <div class="social-links text-md-right pt-3 pt-md-0">
+              <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+              <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://linkedin.com/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
           </div>
+          
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
@@ -293,11 +294,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Check our portfolio for more...</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
             </ul>
           </div>
 
@@ -317,13 +318,11 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>HachStacks™</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>HachStacks</span></strong>.
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <p><b>All Rights Reserved</b></p>
       </div>
     </div>
   </footer><!-- End Footer -->
