--- a/portfolio.html
+++ b/portfolio.html
@@ -94,13 +94,13 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-web">Web Devs</li>
+              <li data-filter=".filter-web" class="filter-active">Web Devs</li>
               <li data-filter=".filter-mobile">Mobile Devs</li>
               <li data-filter=".filter-design">Designers</li>
               <li data-filter=".filter-managers">Project Managers</li>
               <li data-filter=".filter-digimart">Digital Marketers</li>
               <li data-filter=".filter-games">Game Devs</li>
+              <li data-filter="*">Other Stacks</li>
             </ul>
           </div>
         </div>
