all footer urls fixed

--- a/about.html
+++ b/about.html
@@ -363,7 +363,7 @@
           <div class="col-lg-3 col-md-6 footer-contact footer-links">
             <h3>HachStacks</h3>
             <p>
-              Akwa Ibom State University,<br><br>
+              Akwa Ibom State University<br><br>
             </p>
             <div class="social-links text-md-right pt-3 pt-md-0">
               <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
