--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -147,15 +147,19 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-3 col-md-6 footer-contact footer-links">
             <h3>HachStacks</h3>
             <p>
-              Akwa Ibom State University,<br>
-              Both Campuses<br><br>
-              <strong>Whatsapp:</strong> +234 815 6841 952<br>
-              <strong>Email:</strong> hello@hachstacks.com<br>
+              Akwa Ibom State University<br><br>
             </p>
+            <div class="social-links text-md-right pt-3 pt-md-0">
+              <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+              <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
+              <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href="https://linkedin.com/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            </div>
           </div>
+          
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
@@ -171,11 +175,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Digital Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
             </ul>
           </div>
 
@@ -195,17 +199,15 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>HachStacks™</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>HachStacks</span></strong>.
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <p><b>All Rights Reserved</b></p>
       </div>
     </div>
   </footer><!-- End Footer -->
- 
+
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
