--- a/brochure.html
+++ b/brochure.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -12,7 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
- 
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -44,27 +44,26 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="dropdown"><a href="#"><span class="active">About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="about.html" class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Blog</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
-              <li><a href="testimonials.html" class="active">Testimonials</a></li>
+              <li><a href="testimonials.html">Testimonials</a></li>
               </li>
             </ul>
           </li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Join US</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="join.html">Join Us</a></li>
         </ul>
-        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
+        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://linkedin.com/in/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
 
     </div>
@@ -78,10 +77,6 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <h2>Profile and Roadmap</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Profile</li>
-          </ol>
         </div>
 
       </div>
@@ -89,6 +84,8 @@
 
     <!-- ======= Blog Single Section ======= -->
     <embed src="/assets/pdf/Hbroch.pdf#toolbar=o&navpanes=0&scrollbar=0" type="application/pdf" width="100%" height="550px">
+    <br>
+    <a href="/assets/pdf/Hbroch.pdf" style="text-align: center; align-items: center;">Click to download HachStacks Profile</a>
 
 
   </main><!-- End #main -->
