--- a/join.html
+++ b/join.html
@@ -42,7 +42,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" >Home</a></li>
 
           <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -55,7 +55,7 @@
           </li>
           <li><a href="events.html">Events</a></li>
           <li><a href="contact.html">Contact Us</a></li>
-          <li><a href="join.html">Join Us</a></li>
+          <li><a href="join.html" class="active">Join Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
@@ -76,11 +76,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Join the Community</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Join Us</li>
-          </ol>
+          <h2>Fill the Form to Join!</h2>
         </div>
 
       </div>
@@ -94,7 +90,7 @@
                       <div class="col-12">
                           <div class="section-title">
                               <h3 class="" >Let's know you better!</h3>
-                              <p class="" >Our milestone is we getting closer to you, help us to achieve that</p>
+                              <p class="" >Our milestone is we getting closer to you!</p>
                               <iframe class="iframe-form"src="https://docs.google.com/forms/d/e/1FAIpQLScpCsgsRFng1cP7IANpxEvNbNl0hPEZ3rN1BjTRVf3vRGS7AQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> </div>
                       </div>
                   </div><!--section title-->
