--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html">Home</a></li>
 
           <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -54,7 +54,7 @@
             </ul>
           </li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="contact.html" class="active">Contact Us</a></li>
           <li><a href="join.html">Join Us</a></li>
         </ul>
         <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
@@ -77,10 +77,6 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <h2>Contact Us</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Contact</li>
-          </ol>
         </div>
 
       </div>
@@ -99,7 +95,7 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Akwa Ibom State University<br>Both Campuses</p>
+                  <p>Akwa Ibom State University</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -122,7 +118,7 @@
 
         <div class="row mt-5 justify-content-center" data-aos="fade-up">
           <div class="col-lg-10">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form" netlify>
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
