--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
- 
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -42,23 +42,22 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" >Home</a></li>
 
-          <li class="dropdown"><a href="#"><span class="active">About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="about.html" class="active"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Blog</a></li>
               <li><a href="faqs.html">F.A.Q.</a></li>
               <li><a href="portfolio.html">Portfolios</a></li>
-              <li><a href="testimonials.html" class="active">Testimonials</a></li>
+              <li><a href="testimonials.html">Testimonials</a></li>
               </li>
             </ul>
           </li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Join US</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="join.html">Join Us</a></li>
         </ul>
-        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-x"></i>
+        <i class="navbar-nav navbar-toggler collapse.navbar-collapse mobile-nav-toggle bi-list"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex">
@@ -77,11 +76,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Outstanding Members</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio</li>
-          </ol>
+          <h2>Outstanding Portfolios</h2>
         </div>
 
       </div>
@@ -94,13 +89,13 @@
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter=".filter-web" class="filter-active">Web Devs</li>
+              <li data-filter="*" class="filter-active">All Stacks</li>
+              <li data-filter=".filter-web">Web Devs</li>
               <li data-filter=".filter-mobile">Mobile Devs</li>
               <li data-filter=".filter-design">Designers</li>
               <li data-filter=".filter-managers">Project Managers</li>
               <li data-filter=".filter-digimart">Digital Marketers</li>
               <li data-filter=".filter-games">Game Devs</li>
-              <li data-filter="*">Other Stacks</li>
             </ul>
           </div>
         </div>
@@ -118,7 +113,7 @@
                 <a href=""><i class="bx bxl-github"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"></i></a>
             </div>
           </div>
 
@@ -133,7 +128,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -148,7 +143,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -163,7 +158,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -178,7 +173,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -193,7 +188,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -208,7 +203,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -223,7 +218,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Respect Ndaudo"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Respect Ndaudo">  </i></a>
             </div>
           </div>
 
@@ -238,7 +233,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -253,7 +248,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -268,7 +263,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -283,7 +278,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -298,7 +293,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -313,7 +308,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -328,7 +323,7 @@
                 <a href=""><i class="bx bxl-behance"></i></a>
                 <a href=""><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph"><i class="bx bx-zoom-in"></i></a>
+              <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Unomieta Joseph">  </i></a>
             </div>
           </div>
 
@@ -410,15 +405,19 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-3 col-md-6 footer-contact">
+        <div class="col-lg-3 col-md-6 footer-contact footer-links">
           <h3>HachStacks</h3>
           <p>
-            Akwa Ibom State University,<br>
-            Both Campuses<br><br>
-            <strong>Whatsapp:</strong> +234 815 6841 952<br>
-            <strong>Email:</strong> hello@hachstacks.com<br>
+            Akwa Ibom State University<br><br>
           </p>
+          <div class="social-links text-md-right pt-3 pt-md-0">
+            <a href="https://wa.me/+2348156841952" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+            <a href="https://twitter.com/hachstacks" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="https://facebook.com/hachstacks" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="https://linkedin.com/hachstacks" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          </div>
         </div>
+        
 
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Useful Links</h4>
@@ -434,11 +433,11 @@
         <div class="col-lg-3 col-md-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Web Design / Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Design / Development</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">UI/UX Designs</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Product Management</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Digital Marketing</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Mobile Development</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="portfolio.html">Other Stacks</a></li>
           </ul>
         </div>
 
@@ -458,13 +457,11 @@
 
     <div class="me-md-auto text-center text-md-start">
       <div class="copyright">
-        &copy; Copyright <strong><span>HachStacks™</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>HachStacks</span></strong>.
       </div>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-      <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <p><b>All Rights Reserved</b></p>
     </div>
   </div>
 </footer><!-- End Footer -->
